# cmake_git_version

./: CMakeLists.txt  README.md
src/cmake_git_version/: core.hpp  git.hpp  project.hpp  version.hpp
src/cmake_git_version/detail/: compiler.hpp  string_utils.hpp
templates/: git_version_generated.hpp.in  project_version_generated.hpp.in
